@@ -1,3 +1,4 @@
+- fixed gmail TOP
 - fixed cygwin build target (partially)
 - porting freepops to OpenBSD
 - added cvs_acl to allow contributors commit
